_sass/lucidus.scss
$max-width: 40rem;
$post-separation: 4rem;
$element-width: 95%;

$link-color: #003F10;
$very-light-gray: #DAE1E7;
$light-gray: #ddd;
$gray: #757575;
$table-gray: #8795A1;
$code-gray: #D8D8D8;

html {
  font-family: Verdana, Geneva, Helvetica, Arial, sans-serif;
  font-size: 1rem;
  line-height: 1.75rem;
}

img {
  display: block;
  width: $element-width;
  margin: 0 auto;
}

table {
  display: table;
  width: $element-width;
  margin: 0 auto;
  border: 0.0625rem solid;
  text-align: center;
  table-layout: fixed;
}

td, th {
  border: 0.0625rem solid $very-light-gray;
  padding: 0.5rem;
  width: 100%;
}

tr:hover {
  background-color: $light-gray;
}

th {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  text-align: left;
  background-color: $table-gray;
  color: white;

  text-align: center;
  vertical-align: middle;
}

h1 a {
  color: black !important;
}

h2 a {
  color: black !important;
}

h3 a {
  color: black !important;
}

a {
  color: $link-color;
}

a, a:visited, a:active {
  color: $link-color;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
  text-decoration-color: green;
}

blockquote {
  font-style: italic;
  border-left: 0.3125rem solid $code-gray;
  padding-left: 0.5rem;
}

blockquote:not(blockquote:nth-child(2)) {
  margin-left: 0;
}

pre {
  code {
    display: block;
    border-radius: 0.625rem;
  }
}

code {
  font-family: monospace;
  background-color: $code-gray;
  padding: 0.1875rem 0.3125rem 0.0625rem 0.3125rem;
  border-radius: 0.3125rem;
}

.post-list {
  list-style-type: none;

  li {
    margin-bottom: $post-separation;

    h3 {
      margin-bottom: 0.6rem;
    }
  }
}

.archive-post-link {
  font-size: 1.6rem;
  font-weight: 600;
}

.post-meta {
  color: $gray;
}

.center {
  max-width: $max-width;
  margin: 0 auto;
}

.centered-text {
  text-align: center;
}

.header-info {
  margin-bottom: 3rem;
}

.black-color {
  color: black !important;
}

.footer {
  max-width: $max-width;
  margin: $post-separation auto 0 auto;

  ul {
    padding: 0;
    list-style-type: none;

    li {
      display: inline;
      margin: 0.625rem 0.625rem 0 0;
      white-space: nowrap;
    }
  }
}

